# rusty-python

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
rustypython/: __init__.py  main.py
src/: lib.rs
