[tool.poetry]
name = "rustypython"
version = "0.1.0"
description = "Maturin Starter Project w/PyO3 & Poetry"
authors = ["Adrian Villanueva <adrianvillanueva997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
maturin = "^0.15.3"
pytest = "^7.3.1"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "rustypython"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
